[project]
name = "zetesis"
version = "0.1.0"
description = "Personal async research pipeline"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "sentence-transformers>=5.3.0",
]

[tool.uv.workspace]
members = ["packages/core", "packages/server", "packages/inference"]

[tool.uv.sources]
zetesis-core = { workspace = true }
zetesis-server = { workspace = true }
zetesis-inference = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
